Upgrades to gradle 5.4.1 + compile tasks under task over direct delegation.